# openmed

./: NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
PLANS/V2/: DATASET_ACCESS_PLAN.md  RISK_REGISTER_AND_NON_GOALS.md
docs/: configuration.md  contributing.md  generative-model-policy.md  index.md
docs/release/: semver-and-channels.md
openmed/: __init__.py
openmed/core/: __init__.py  audit.py  backends.py  config.py  models.py  offline.py  pii.py
openmed/mlx/: inference.py
scripts/release/: check_license_policy.py
tests/integration/: test_sentence_detection_real.py
tests/unit/: test_offline_mode.py
tests/unit/core/: test_audit_report.py  test_deid_provenance.py
tests/unit/mlx/: test_mlx_inference.py  test_privacy_filter_mlx.py
tests/unit/release/: test_license_policy.py
